--- a/style.css
+++ b/style.css
@@ -17,13 +17,16 @@ body {
 }
 
 .navbar {
+    background-color: rgba(255, 255, 255, 0.753);
     position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 2;
-    width: 91%;
-    margin-top: 1rem;
+    padding: 1rem 9rem;
 }
 
 .mobile-menu-icon {
@@ -232,16 +235,22 @@ main {
         padding: 0.5rem 1rem;
     }
 
+    .navbar {
+        padding: 0.5rem 1rem;
+    }
+
+
     .mobile-menu {
-        transition-duration: 0.5s;
         position: absolute;
-        flex-direction: column;
-        background-color: rgba(53, 51, 51, 0.37);
+        top: 0;
+        left: 0;
         right: 0;
-        left: 0px;
-        bottom: 0;
-        top: 0px;
+        transition-duration: 0.5s;
+        flex-direction: column;
+        background-color: rgba(53, 51, 51, 0.541);
         z-index: 5;
+        width: 100vw;
+        height: 100vh;
     }
 
     .mobile-menu-icon {
@@ -257,7 +266,7 @@ main {
         bottom: 0;
         top: 0;
         padding: 1rem;
-        z-index: 5;
+        z-index: 10;
     }
 
     .mobile-menu .menuLinks img {
